# kw_drive_smartkonb

./: .gitignore  README.md  README.zh-CN.md  mit.md
scripts/: fix_kw_u2canfd_permissions.sh
src/kw_drive/: CMakeLists.txt  README.md  README.zh-CN.md  package.xml
src/kw_drive/config/: motor_test.yaml  smart_knob.yaml
src/kw_drive/include/kw_drive/protocol/: kw_motor.h  kw_serial_transport.h
src/kw_drive/launch/: motor_test.launch.py  smart_knob.launch.py
src/kw_drive/src/: kw_motor_test_node.cpp  kw_smart_knob_node.cpp
src/kw_drive/src/protocol/: kw_motor.cpp  kw_serial_transport.cpp
src/kw_drive_tools/: README.md  README.zh-CN.md  package.xml  setup.cfg  setup.py
src/kw_drive_tools/kw_drive_tools/: kw_scope.py
src/kw_drive_tools/launch/: kw_scope.launch.py
