<?xml version="1.0"?>
<package format="3">
  <name>kw_drive</name>
  <version>0.1.0</version>
  <description>ROS 2 Jazzy U2CANFD MIT-control package for the custom KW Drive FOC controller.</description>
  <maintainer email="ros@todo.todo">ros</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
