<?xml version="1.0"?>
<package format="3">
  <name>kw_drive_tools</name>
  <version>0.1.0</version>
  <description>Standalone plotting tools for KW Drive ROS 2 feedback.</description>
  <maintainer email="ros@todo.todo">ros</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
